--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,117 @@
 body {
 	height: 4000px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .scrolled{
 	background-color: rgba(0,0,0, 0.8); /*0.8 opacity*/
+}
+
+.header {
+	background: url('../img/dummy-header.jpg') no-repeat top center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height: 100vh;
+	position: relative;
+	color: #fff;
+}
+
+.header .overlay {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0, 0.6);
+}
+
+.header .centering-vh {
+	margin-top: 25vh;
+}
+
+.header h1 {
+	font-weight: bold;
+	font-size: 60px;
+}
+
+.header h1 span {
+	font-weight: normal;
+	font-size: 60px;
+	color: #FF8B38;
+}
+
+.header h1 ~ .lead { /* the lead class after h1 */
+	font-size: 40px;
+}
+
+.header h1 ~ .lead::after {
+	content: '';
+	display: block;
+	width: 70px;
+	height: 2px;
+	background-color: #FFF;
+	margin: 25px 0px;
+}
+
+.header button {
+	background: transparent;
+	margin-top: 20px;
+	padding: 5px 15px;
+	border: 2px solid #FFF;
+	font-weight: bold;
+}
+
+.header form {
+	width: 360px;
+	background-color: #FFF;
+	border-radius: 5px;
+	overflow: hidden;
+}
+
+.header form h2 {
+	background-color: #F5F5F5;
+	color: #333;
+	font-size: 18px;
+	padding: 10px;
+	font-weight: bold;
+	margin-top: 0;
+	margin-bottom: 30px;
+}
+
+.header form h2 span {
+	color: #FF8B38;
+}
+
+.header  form .form-control {
+	border-radius: 0;
+	border: none;
+	box-shadow: none;
+	border-bottom: 1px solid #CCC;
+	width: 80%;
+	margin: 0 auto 40px;
+}
+
+.header form input[type="submit"] {
+	padding: 15px;
+	background-color: #FF9B51;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.uppercase {
+	text-transform: uppercase;
+}
+
+.lowercase {
+	text-transform: lowercase;
 }
