--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,58 @@ body {
 	background-color: #FF9B51;
 }
 
+.social-section {
+	padding: 10px;
+	box-shadow: -2px -5px 13px #000;
+}
+
+.social-section h3 {
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+
+.social-section p {
+	color: #a1a1a1;
+	line-height: 1.4;
+}
+
+.social-section i {
+	color: #ccc;
+	margin: 20px 15px;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+	cursor: pointer;
+}
+
+.social-section .fa-facebook:hover {
+	color: #3b5998;
+}
+
+.social-section .fa-twitter:hover {
+	color: #1da1f2;
+}
+
+.social-section .fa-pinterest:hover {
+	color: #1da1f2;
+}
+
+.social-section .fa-google-plus:hover {
+	color: #dd4b39;
+}
+
+.social-section .fa-instagram:hover {
+	color: #5851db;
+}
+
+.social-section .fa-stumbleupon:hover {
+	color: #eb4924;
+}
+
+.social-section .fa-rss:hover {
+	color: #f26522;
+}
 
 
 
