--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,69 @@ body {
 }
 
 
+.tabs-section {
+	padding: 50px 0;
+	background-color: #F5F5F5;
+}
+
+.tabs-section .tab-switch li {
+	padding: 10px;
+	background-color: #333;
+	color: #FFF;
+	border-bottom: 1px solid #FFF;
+	height: 110px;
+	line-height: 110px;
+	font-size: 20px;
+	cursor: pointer;
+}
+
+.tabs-section .tab-switch li.selected,
+.tabs-section .tab-switch li:hover {
+	background-color: #FF8B38;
+}
+
+.tabs-section .tabs-content h3 {
+	margin-top: 0;
+	font-weight: bold;
+	letter-spacing: -1px;
+	margin-bottom: 20px;
+}
+
+.tabs-section .tabs-content .lead {
+	line-height: 1.6;
+	font-size: 18px;
+	color: #7e7e7e;
+}
+
+.tabs-section .tabs-content button {
+	background-color: #FF8B38;
+	color: #FFF;
+	border-radius: 3px;
+}
+
+.tabs-section .tabs-content div:not(.tab-one) {/* any did that is not tab-one*/
+	display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
