--- a/css/main.css
+++ b/css/main.css
@@ -289,8 +289,75 @@ body {
 }
 
 
+.price-options {
+	padding: 80px 0;
+	background-color: #f5f5f5;
+}
 
+.price-options .price-head {
+	font-weight: bold;
+	font-size: 40px;
+}
 
+.price-options .price-desc {
+	margin-bottom: 70px;
+	color: #a9aaac;
+}
+
+.price-options .price-box {
+	background-color: #fff;
+}
+
+.price-options .price-box .plan-head {
+	background-color: #333;
+	color: #fff;
+	padding: 15px 0;
+	font-weight: bold;
+	margin:0;
+	border-bottom: 1.5px solid #fff;
+}
+
+.price-options .price-box .option-price {
+	background-color: #333;
+	padding: 10px 0 20px;
+	border-bottom: 5px solid #FF8B38;
+}
+
+.price-options .price-box .option-price .price {
+	font-size: 70px;
+	color: #fff;
+	display: block;
+	font-weight: bold;
+}
+
+.price-options .price-box .option-price .price .usd {
+	font-size: 30px;
+}
+
+.price-options .price-box .option-price  .period {
+	color: #adadad;
+	font-weight: bold;
+	font-style: italic;
+}
+
+.price-options .configuration li {
+	padding: 5px;
+	border-bottom: 1px solid #f5f5f5;
+	color: #8c8c8c;
+}
+
+.price-options .price-box .most-pop {
+	background-color: #FF8B38;
+	color: #fff;
+	padding: 5px 10px 10px;
+	margin-bottom: 0;
+	font-weight: bold;
+}
+
+.price-options .basic,
+.price-options .enterprise {
+	margin-top: 35px;
+}
 
 
 
