--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body {
 	font-size: 40px;
 }
 
-.header h1 ~ .lead::after {
+.header h1 ~ .lead:after {
 	content: '';
 	display: block;
 	width: 70px;
@@ -359,10 +359,47 @@ body {
 	margin-top: 35px;
 }
 
+.testimonial {
+	padding: 70px 0;
+	background-color: #fff;
+}
 
+.testimonial .tes-desc {
+	margin-bottom: 40px;
+}
 
+.testimonial  .client-tes {
+	color: #8e8f93;
+	background-color: #f5f5f5;
+	padding: 20px;
+	position: relative;
+}
 
+.testimonial  .client-tes:after {
+	content: '';
+	display: block;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 14px 10px 10px 10px;
+	border-color: #f5f5f5 transparent transparent transparent;
+	position: absolute;
+  bottom: -24px;
+  left: 25px;
+}
 
+.testimonial .media {
+	margin-top: 20px;
+}
+
+.testimonial .media-heading {
+	font-weight: bold;
+	margin-top: 20px;
+}
+
+.testimonial .media-body p {
+	color: #a9aaac;
+}
 
 
 
