--- a/css/main.css
+++ b/css/main.css
@@ -397,9 +397,49 @@ body {
 	margin-top: 20px;
 }
 
-.testimonial .media-body p {
+.testimonial .media p {
 	color: #a9aaac;
 }
+
+
+.stylish {
+	background: url('../img/stylish-background.jpg') no-repeat top center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height: 320px;
+	position: relative;
+	color: #fff;
+}
+
+.stylish .overlay {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0, 0.6);
+	padding: 50px 0;
+}
+
+.stylish .stylish-desc {
+	font-size: 15px;
+	font-weight: lighter;
+	color: #a9aaac;
+}
+
+.stylish button {
+	background: transparent;
+	margin: 20px auto;
+	padding: 10px 25px;
+	border: 2px solid #FFF;
+	font-weight: bold;
+}
+
+.stylish .head-border-center:after {
+	background-color: #fff;
+}
+
+
+
 
 
 
