--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,16 @@ body {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	height: 100vh;
+	height: 115vh;
 	position: relative;
 	color: #fff;
+	overflow: hidden;
 }
 
 .header .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0, 0.6);
@@ -25,6 +29,12 @@ body {
 
 .header .centering-vh {
 	margin-top: 25vh;
+}
+
+@media (max-width: 991px) {
+	.header .centering-vh {
+		margin-top: 70px;
+	}
 }
 
 .header h1 {
@@ -51,6 +61,12 @@ body {
 	margin: 25px 0px;
 }
 
+@media (max-width: 991px) {
+	.header h1 ~ .lead:after {
+		margin: 25px auto;
+	}
+}
+
 .header button {
 	background: transparent;
 	margin-top: 20px;
@@ -59,7 +75,15 @@ body {
 	font-weight: bold;
 }
 
+@media (max-width: 991px) {
+	.header button {
+		display: block;/*without it, no centering!*/
+		margin: 30px auto;
+	}
+}
+
 .header form {
+	margin-top: 50px;
 	width: 360px;
 	background-color: #FFF;
 	border-radius: 5px;
@@ -70,7 +94,7 @@ body {
 	background-color: #F5F5F5;
 	color: #333;
 	font-size: 18px;
-	padding: 10px;
+	padding: 15px;
 	font-weight: bold;
 	margin-top: 0;
 	margin-bottom: 30px;
@@ -90,8 +114,10 @@ body {
 }
 
 .header form input[type="submit"] {
-	padding: 15px;
+	padding: 16px;
 	background-color: #FF9B51;
+	border-radius: 0;
+	font-weight: bold;
 }
 
 .social-section {
@@ -99,9 +125,21 @@ body {
 	box-shadow: -2px -5px 13px #000;
 }
 
+@media (max-width: 991px) {
+	.social-section {
+		text-align: center;
+	}
+}
+
 .social-section h3 {
 	font-weight: bold;
 	margin-bottom: 5px;
+}
+
+@media (max-width: 991px) {
+	.social-section h3 {
+		margin-bottom: 15px;
+	}
 }
 
 .social-section p {
@@ -117,6 +155,12 @@ body {
 	-o-transition: all .3s ease-in-out;
 	transition: all .3s ease-in-out;
 	cursor: pointer;
+}
+
+@media (max-width: 991px) {
+	.social-section i {
+		margin: 10px 15px;
+	}
 }
 
 .social-section .fa-facebook:hover {
@@ -153,6 +197,12 @@ body {
 	background-color: #F5F5F5;
 }
 
+@media (max-width: 991px) {
+	.tabs-section {
+	text-align: center;
+	}
+}
+
 .tabs-section .tab-switch li {
 	padding: 10px;
 	background-color: #333;
@@ -176,6 +226,12 @@ body {
 	margin-bottom: 20px;
 }
 
+@media (max-width: 991px) {
+	.tabs-section .tabs-content h3 {
+		margin: 30px 0 20px;
+	}
+}
+
 .tabs-section .tabs-content .lead {
 	line-height: 1.6;
 	font-size: 18px;
@@ -194,6 +250,13 @@ body {
 
 .sublist {
 	padding: 80px 0;
+}
+
+@media (max-width: 991px) {
+	.sublist {
+		text-align: center;
+		padding: 40px 0;
+	}
 }
 
 .sublist .sub-img {
@@ -228,13 +291,34 @@ body {
 	margin-top: 10px;
 }
 
+@media (max-width: 991px) {
+	.sublist .list-icon i {
+		float: none !important;
+		margin: 10px 0;
+	}
+}
+
 .sublist .list-icon .text-info {
 	width: calc(100% - 70px);
+}
+
+@media (max-width: 991px) {
+	.sublist .list-icon .text-info {
+		float: none !important;
+		width: 100%;
+	}
 }
 
 .standard-picture {
 	padding: 80px 0;
 	background-color: #f5f5f5;
+}
+
+@media (max-width: 991px) {
+	.standard-picture {
+		text-align: center;
+		padding: 40px 0;
+	}
 }
 
 .standard-picture .standard-img {
@@ -253,6 +337,18 @@ body {
 
 .awesome {
 	padding: 80px 0;
+}
+
+@media (max-width: 991px) {
+	.awesome {
+		padding: 40px 0;
+	}
+}
+
+@media (max-width: 991px) {
+	.awesome .feature-box {
+		margin-bottom: 30px;
+	}
 }
 
 .awesome .awesome-head {
@@ -293,6 +389,12 @@ body {
 	background-color: #f5f5f5;
 }
 
+@media (max-width: 991px) {
+	.price-options {
+		padding: 50px 0;
+	}
+}
+
 .price-options .price-head {
 	font-weight: bold;
 	font-size: 40px;
@@ -303,8 +405,21 @@ body {
 	color: #a9aaac;
 }
 
+@media (max-width: 991px) {
+	.price-options .price-desc {
+		margin-bottom: 20px;
+	}
+}
+
+
 .price-options .price-box {
 	background-color: #fff;
+}
+
+@media (max-width: 991px) {
+	.price-options .price-box {
+		margin-bottom: 30px;
+	}
 }
 
 .price-options .price-box .plan-head {
@@ -363,6 +478,12 @@ body {
 	background-color: #fff;
 }
 
+@media (max-width: 991px) {
+	.testimonial {
+		padding: 40px 0;
+	}
+}
+
 .testimonial .tes-desc {
 	margin-bottom: 40px;
 }
@@ -389,6 +510,12 @@ body {
 
 .testimonial .media {
 	margin-top: 20px;
+}
+
+@media (max-width: 991px) {
+	.testimonial .media {
+		margin-bottom: 20px;
+	}
 }
 
 .testimonial .media-heading {
@@ -441,11 +568,23 @@ body {
 	padding: 70px 0;
 }
 
+@media (max-width: 991px) {
+	.contact {
+		padding: 40px 0;
+	}
+}
+
 .contact .contact-desc {
 	font-size: 15px;
 	font-weight: normal;
 	color: #a9aaac;
 	margin-bottom: 80px;
+}
+
+@media (max-width: 991px) {
+	.contact .contact-desc {
+		margin-bottom: 65px;
+	}
 }
 
 .contact .contact-form input[type="text"],
@@ -477,6 +616,12 @@ body {
 	font-weight: bolder;
 	font-size: 16px;
 	padding: 15px;
+}
+
+@media (max-width: 991px) {
+	.contact .contact-btn {
+		margin: 45px auto 20px;
+	}
 }
 
 .footer {
@@ -516,6 +661,11 @@ body {
 	margin: 25px 0;
 }
 
+@media (max-width: 991px) {
+	.head-border:after {
+		margin: 25px auto;
+	}
+}
 
 .head-border-center:after {
 	content: '';
@@ -524,4 +674,10 @@ body {
 	height: 3px;
 	background-color: #FF8B38;
 	margin: 25px auto;
+}
+
+@media (max-width: 991px) {
+	.text-center-xs {
+		text-align: center;
+	}
 }
